--- a/views/rooms.hbs
+++ b/views/rooms.hbs
@@ -67,13 +67,16 @@
             </div>
           </nav>
     </header>
+    <br>
+    <br>
+    <br>
   
     <section>
       {{#each rows}}
       <div class="card mb-3 text-white" style="max-width: 100%; margin:40px; background-color:#3C415C">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="images/{{this.Imagepath}}.jpg" class="img-fluid rounded-start" style="width:100%" alt="...">
+            <img src="images/{{this.Imagepath}}.jpg" class="img-fluid rounded-start" style="width:100%;" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
@@ -87,54 +90,21 @@
         </div>
       </div>
        {{/each}}
-      {{!-- <div class="card mb-3 text-white" style="max-width: 100%; margin:40px; background-color:#3C415C">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="images/room3.jpg" class="img-fluid rounded-start" style="width:100%" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h2 class="card-title">G-HOSTEL</h2>
-              <h3>2 BEDDED</h3>
-              <h4>250 per day</h4>
-              <br>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat voluptatum nobis in tempora tenetur labore eius unde repudiandae, illo porro eum nesciunt impedit mollitia ratione ad beatae soluta provident odio nihil, facilis enim laboriosam? Dolor quia voluptas fuga! Eum natus ratione repudiandae, corporis eveniet quidem mollitia molestiae velit labore? Sequi.</p>
-            </div>
-          </div>
+        </section>
+        <br>
+      <section id="footer">
+        <div class="bg-dark text-light">
+            <div class="row row-cols-2 row-cols-lg-2">
+                <div class="col text-center py-5"><h2>National Institute of Technology Calicut</h2></div>
+            <div class="col">
+                <br>
+                <p>Chief Warden: 0495-2285454</p>
+                <p>Hostel Office: 0495-2285208</p>
+                <p>Manager: 0495-2287238</p>
+            <p>Website:<a href="www.nitc.ac.in"> www.nitc.ac.in</a></p>
+             </div>
         </div>
-      </div>
-      <div class="card mb-3 text-white" style="max-width: 100%; margin:40px; background-color:#3C415C">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="images/room3.jpg" class="img-fluid rounded-start" style="width:100%" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h2 class="card-title">PG-2</h2>
-              <h3>2 BEDDED</h3>
-              <h4>250 per day</h4>
-              <br>
-              <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos, perferendis. Perspiciatis ipsam animi molestias saepe sed eveniet unde nam, cum, nisi dolore reprehenderit corporis repellat non sequi ad hic at. Doloremque excepturi perspiciatis, error ipsum laudantium, quos non placeat necessitatibus cupiditate odio saepe earum, sed hic sit veritatis illum repellat?</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="card mb-3 text-white" style="max-width: 100%; margin:40px; background-color:#3C415C">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="room3.jpg" class="img-fluid rounded-start" style="width:100%" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h2 class="card-title">SAC</h2>
-              <h3>2 BEDDED</h3>
-              <h4>250 per day</h4>
-              <br>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum vitae id, laborum, esse repellendus quos quis aspernatur numquam consequuntur eius tempore enim dolor deserunt officiis! Iste ducimus illo obcaecati odio maxime consequuntur voluptatem maiores ut quibusdam laborum, nisi, in, molestias voluptas assumenda voluptates nihil quas. Odio laboriosam autem illo voluptas!</p>
-            </div>
-          </div>
-        </div>
-      </div> --}}
-    </section>
+   </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
