--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -20,27 +20,27 @@
   		<div class="row row-cols-1 row-cols-lg-2">
 				<div class="col"><img src="images/adminphoto.webp" style="width:100%; height:120%;  top:-199px; left:720px;" alt="cake"></div>
 			<div class="col">
-				<h3 class="mb-4" style="margin-top: 170px; padding-left:35%">Admin Login</h3>
 					{{#ifEquals errcode "inv"}}
-							<div class="alert alert-danger alert-dismissible fade show text-center" role="alert">
+							<div class="alert alert-danger alert-dismissible fade show text-center" role="alert" style="margin-top:40px">
 						<strong> {{x}}</strong> Invalid password!
 						<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 					</div>
 				{{/ifEquals}}
 
 				{{#ifEquals errcode "NotExist"}}
-							<div class="alert alert-danger alert-dismissible fade show text-center" role="alert">
+							<div class="alert alert-danger alert-dismissible fade show text-center" role="alert" style="margin-top:40px">
 						<strong> {{x}}</strong> User not exist!
 						<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 					</div>
 				{{/ifEquals}}
 
 				{{#ifEquals errcode "logout"}}
-							<div class="alert alert-primary alert-dismissible fade show text-center" role="alert">
+							<div class="alert alert-primary alert-dismissible fade show text-center" role="alert" style="margin-top:40px">
 						<strong> {{x}}</strong> You have logged out successfully!
 						<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 					</div>
 				{{/ifEquals}}
+				<h3 class="mb-4" style="margin-top: 120px; padding-left:35%">Admin Login</h3>
 					<form action="/admin" method="POST" class="signin-form " style="width: 300px; height: 150px; margin-left:150px">
 						<div class="form-group">
 							<input type="text" name="email" class="form-control" placeholder="Username" required>
