--- a/views/booking.hbs
+++ b/views/booking.hbs
@@ -36,12 +36,12 @@
     <br>
     <br>
     <br>
-    <div class="container">
+    <div class="container" style="padding:5px">
     <div class="row">
-        <div class="col-md-4 order-md-2 mb-4">
-            <h4 class="d-flex justify-content-between align-items-center mb-3">
+        <div class="col-md-4 order-md-2 mb-4" style="text-align: center;">
+            <h3 class="d-flex justify-content-between align-items-center mb-3">
                 <span style="color: black;">YOUR BOOKING DETAILS</span>
-            </h4>
+            </h3>
             <br>
             <ul class="list-group mb-3 sticky-top">
                 <li class="list-group-item d-flex justify-content-between lh-condensed">
@@ -75,14 +75,25 @@
                     <span>{{det.rooms}}</span>
                 </li>
             </ul>
+            <h3 class="d-flex justify-content-between align-items-center mb-3">
+                <span style="color: black;">INSTRUCTIONS</span>
+            </h3>
+            <div style="background:white; text-align:left; padding-bottom:5px">
+                <ol>
+                    <li>Pay on spot.</li>
+                    <li>Free wi-fi available.</li>
+                    <li>Please follow NITC rules.</li>
+                </ol>
+            </div>
+            
         </div>
         <div class="col-md-8 order-md-1">
-            <center><h4 class="mb-3">BOOKING CONFIRMATION</h4></center>
+            <center><h3 class="mb-3">BOOKING CONFIRMATION</h3></center>
+            <div style="background-color:white; padding:8px;">
             <form class="needs-validation" novalidate="" method="POST" action="/bookingConfirmation">
                 <div class="row">
                     <div class="col-md-6 mb-3">
-                        <label for="firstName">Name</label>
-                        <input name="fname" type="text" class="form-control" id="firstName" placeholder="Enter Name here" value="" required="">
+                        <label for="firstName">Name</label><input name="fname" type="text" class="form-control" id="firstName" placeholder="Enter Name here" value="" required="">
                         <div class="invalid-feedback"> Valid first name is required. </div>
                     </div>
                     <div class="col-md-6 mb-3">
@@ -92,7 +103,7 @@
                     </div>
                 </div>
                 <div class="mb-3">
-                    <label for="username">Username</label>
+                    <label for="username">Roll Number</label>
                     <div class="input-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text">@</span>
@@ -112,46 +123,6 @@
                     <label for="Mobile">Mobile<span class="text-muted"></span></label>
                     <input type="text" name="mob" maxlength="10" class="form-control" id="Mobile" placeholder="Enter Mobile Number" required="">
                 </div>
-                {{!-- <h4 class="mb-3">Payment</h4>
-                <div class="d-block my-3">
-                    <div class="custom-control custom-radio">
-                        <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked="" >
-                        <label class="custom-control-label" for="credit">Credit card</label>
-                    </div>
-                    <div class="custom-control custom-radio">
-                        <input id="debit" name="paymentMethod" type="radio" class="custom-control-input" >
-                        <label class="custom-control-label" for="debit">Debit card</label>
-                    </div>
-                    <div class="custom-control custom-radio">
-                        <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" >
-                        <label class="custom-control-label" for="paypal">PayPal</label>
-                    </div>
-                </div> --}}
-                {{!-- <div class="row">
-                    <div class="col-md-6 mb-3">
-                        <label for="cc-name">Name on card</label>
-                        <input type="text" class="form-control" id="cc-name" placeholder="" >
-                        <small>Full name as displayed on card</small>
-                        <div class="invalid-feedback"> Name on card is required </div>
-                    </div>
-                    <div class="col-md-6 mb-3">
-                        <label for="cc-number">Credit card number</label>
-                        <input type="text" class="form-control" id="cc-number" placeholder="" >
-                        <div class="invalid-feedback"> Credit card number is required </div>
-                    </div>
-                </div> --}}
-                {{!-- <div class="row">
-                    <div class="col-md-3 mb-3">
-                        <label for="cc-expiration">Expiration</label>
-                        <input type="text" class="form-control" id="cc-expiration" placeholder="" >
-                        <div class="invalid-feedback"> Expiration date required </div>
-                    </div>
-                    <div class="col-md-3 mb-3">
-                        <label for="cc-cvv">CVV</label>
-                        <input type="text" class="form-control" id="cc-cvv" placeholder="" >
-                        <div class="invalid-feedback"> Security code required </div>
-                    </div>
-                </div> --}}
                 <div class="row">
                     <div class="col-md-6 mb-3">
                         <label for="roomAmount">Amount/Room</label>
@@ -167,8 +138,9 @@
                     </div>
                 <br> <br>
             
-                <center><button class="btn btn-primary btn-lg btn-block active" type="submit">CONFIRM BOOKING</button></center>
+                <center><button class="btn btn-primary btn-lg btn-block active" style="margin-bottom:10px" type="submit">CONFIRM BOOKING</button></center>
             </form>
+            </div>
         </div>
     </div>
 </div>
