--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CONTACT FORM</title>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -54,59 +54,134 @@
 	}
 </style>
 <body>
-	{{#if subm}}
-        <div class="alert alert-primary alert-dismissible fade show text-center" role="alert">
-                Thank you, your feedback has been submitted successfully!   
-				<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-    {{/if}}
-
-<div class="container contact">
-	<div class="row">
-		<div class="col-md-3">
-			<div class="contact-info">
-				<img src="https://image.ibb.co/kUASdV/contact-image.png" alt="image"/>
-				<h2>Contact Us</h2>
-				<h4>We would love to hear from you !</h4>
+	<header class="header">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="#">
+					<img src="images/logo.jpg" alt="logo" style="width: 50px; height: 50px; border-radius: 50%;">
+				</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+						<li class="nav-item">
+							<a class="nav-link" aria-current="page" href="/">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" aria-current="page" href="about">About</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="rooms">Rooms</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="contact">Contact</a>
+						</li>
+					</ul>
+					{{#if removedUser}}
+					<ul class="navbar-nav ms-auto">
+						<button class="btn btn-primary" type="button">
+							<img src="images/loginlogo.png" style="width:20px; height:25px; border-radius:100%; margin-right: 10px;" alt="sign up">
+							<a href="/logout" style="width:auto; text-decoration: none; color:white;" aria-current="page"> Logout</a>
+						</button>
+					</ul>
+					{{else}}
+					<ul class="navbar-nav ms-auto">
+						<button class="btn btn-primary" type="button">
+							<img src="images/loginlogo.png" style="width:20px; height:25px; border-radius:100%; margin-right: 10px;" alt="sign up">
+							<a href="user" style="text-decoration: none; color:white ;">Login</a>
+						</button>
+					</ul>
+					{{/if}}
+				</div>
 			</div>
-		</div>
-		<div class="col-md-9">
-			<div class="contact-form">
-				<form method="POST" action="/contact">
-				<div class="form-group">
-				  <label class="control-label col-sm-2" for="fname">First Name:</label>
-				  <div class="col-sm-10">          
-					<input type="text" class="form-control" id="fname" placeholder="Enter First Name" name="fname" required  >
-				  </div>
+		</nav>
+	</header>
+	<br>
+	<br>
+	{{#if subm}}
+	<br>
+	<br>
+	<div class="alert alert-secondary alert-dismissible fade show text-center" role="alert">
+		Thank you, your feedback has been submitted successfully!
+		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+	</div>
+	{{/if}}
+
+	<div class="container contact">
+		<div class="row">
+			<div class="col-md-3">
+				<div class="contact-info">
+					<img src="https://image.ibb.co/kUASdV/contact-image.png" alt="image" />
+					<h2>Contact Us</h2>
+					<h4>We would love to hear from you !</h4>
 				</div>
-				<div class="form-group">
-				  <label class="control-label col-sm-2" for="lname">Last Name:</label>
-				  <div class="col-sm-10">          
-					<input type="text" class="form-control" id="lname" placeholder="Enter Last Name" name="lname" required>
-				  </div>
+			</div>
+			<div class="col-md-9">
+				<div class="contact-form">
+					<form method="POST" action="/contact">
+						<div class="form-group">
+							<label class="control-label col-sm-2" for="fname">First Name:</label>
+							<div class="col-sm-10">
+								<input type="text" class="form-control" id="fname" placeholder="Enter First Name" name="fname" required>
+								<br>
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-sm-2" for="lname">Last Name:</label>
+							<div class="col-sm-10">
+								<input type="text" class="form-control" id="lname" placeholder="Enter Last Name" name="lname" required>
+								<br>
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-sm-2" for="email">Email:</label>
+							<div class="col-sm-10">
+								<input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
+								<br>
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-sm-2" for="comment">Feedback:</label>
+							<div class="col-sm-10">
+								<textarea class="form-control" rows="4" name="feedback" placeholder="Enter feedback" id="comment" required></textarea>
+								<br>
+							</div>
+						</div>
+						<br>
+						<div class="form-group">
+							<div class="col-sm-offset-2 col-sm-10">
+								<center><button type="submit" class="btn btn-primary">Submit</button></center>
+							</div>
+						</div>
+					</form>
 				</div>
-				<div class="form-group">
-				  <label class="control-label col-sm-2" for="email">Email:</label>
-				  <div class="col-sm-10">
-					<input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
-				  </div>
-				</div>
-				<div class="form-group">
-				  <label class="control-label col-sm-2" for="comment">Feedback:</label>
-				  <div class="col-sm-10">
-					<textarea class="form-control" rows="4" name="feedback" placeholder="Enter feedback" id="comment" required></textarea>
-				  </div>
-				</div>
-                <br>
-				<div class="form-group">        
-				  <div class="col-sm-offset-2 col-sm-10">
-					<center><button type="submit" class="btn btn-primary">Submit</button></center>
-				  </div>
-				</div>
-				</form>
 			</div>
 		</div>
 	</div>
-</div>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<section id="footer">
+		<div class="bg-dark text-light">
+			<div class="row row-cols-2 row-cols-lg-2">
+				<div class="col text-center py-5"><h2>National Institute of Technology Calicut</h2></div>
+				<div class="col">
+					<br>
+					<p>Chief Warden: 0495-2285454</p>
+					<p>Hostel Office: 0495-2285208</p>
+					<p>Manager: 0495-2287238</p>
+					<p>Website:<a href="www.nitc.ac.in"> www.nitc.ac.in</a></p>
+				</div>
+			</div>
+	</section>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
