--- a/views/booking.hbs
+++ b/views/booking.hbs
@@ -93,7 +93,8 @@
             <form class="needs-validation" novalidate="" method="POST" action="/bookingConfirmation">
                 <div class="row">
                     <div class="col-md-6 mb-3">
-                        <label for="firstName">Name</label><input name="fname" type="text" class="form-control" id="firstName" placeholder="Enter Name here" value="" required="">
+                        <label for="firstName">Name</label>
+                        <input name="fname" type="text" class="form-control" id="firstName" placeholder="Enter Name here" value="" required="">
                         <div class="invalid-feedback"> Valid first name is required. </div>
                     </div>
                     <div class="col-md-6 mb-3">
