--- a/views/manage.hbs
+++ b/views/manage.hbs
@@ -31,12 +31,12 @@
         <div class="sidebar" data-color="blue" data-image=" assets/img/sidebar-5.jpg">
             <div class="sidebar-wrapper">
                 <ul class="nav">
-                    <li id="dash">
+                    {{!-- <li id="dash">
                         <a  class="nav-link " href="/manage?type=dashboard">
                             <i class="nc-icon nc-button-power"></i>
                             <p>Dashboard</p> <hr>
                         </a>
-                    </li>
+                    </li> --}}
                     <li id="managers">
                         <a  class="nav-link" href="/manage?type=managers">
                             <i class="nc-icon nc-circle-09"></i>
