--- a/views/rooms.hbs
+++ b/views/rooms.hbs
@@ -76,7 +76,7 @@
       <div class="card mb-3 text-white" style="max-width: 100%; margin:40px; background-color:#3C415C">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="images/{{this.Imagepath}}.jpg" class="img-fluid rounded-start" style="width:100%;" alt="...">
+            <img src="images/{{this.Imagepath}}.jpg" class="img-fluid rounded-start" style="width:100%; height:400px" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
