--- a/views/booking.hbs
+++ b/views/booking.hbs
@@ -79,11 +79,13 @@
                 <span style="color: black;">INSTRUCTIONS</span>
             </h3>
             <div style="background:white; text-align:left; padding-bottom:5px">
-                <ol>
-                    <li>Pay on spot.</li>
+                <ul>
+                    <li>Payment has to be done directly via cash beforehand.</li>
                     <li>Free wi-fi available.</li>
-                    <li>Please follow NITC rules.</li>
-                </ol>
+                    <li>Please carry any govt. issued photo ID.</li>
+                    <li>Please keep the booking confirmation number displayed after booking for your reference.</li>
+                    <li>NITC guest management team reserves complete rights of the booking and modify/cancel at any time.</li>
+                </ul>
             </div>
             
         </div>
@@ -138,8 +140,11 @@
                         <input type="text" class="form-control" value="{{mult det.rooms amount}}"  disabled>
                     </div>
                 <br> <br>
-            
+                <br> <br>
+                <br>
                 <center><button class="btn btn-primary btn-lg btn-block active" style="margin-bottom:10px" type="submit">CONFIRM BOOKING</button></center>
+                <br> <br>
+                <br> <br>
             </form>
             </div>
         </div>
