--- a/views/adminUpdateForm.hbs
+++ b/views/adminUpdateForm.hbs
@@ -50,7 +50,6 @@
     <div class="card card-plain table-plain-bg">
          <div class="card-header">
                 <center><u><h2 class="card-title" style="color:black">{{tname}} Table</u></h2></center>
-                <center><h4 style="color:black">Edit {{tname}}  </h4></center>
             </div>
     </div>
 
@@ -277,23 +276,23 @@
 
     {{#ifEquals tname "Add"}}
     {{!-- coulmnArray = ['ID','Name','Email','Password','Del_id']; --}}
-        <form method="POST" action="/update">
-             <div class="mb-3 col-6">
+        <form method="POST" action="/update" style="background: white; margin-left:25%; margin-right:25%; padding:5px">
+             <div class="mb-3 col-12">
                 <label for="disabledTextInput" class="form-label">NAME</label>
                 <input name="aname" type="text" id="disabledTextInput" class="form-control" value="">
             </div>
              
-            <div class="mb-3 col-6">
+            <div class="mb-3 col-12">
                 <label for="exampleInputEmail1" class="form-label">Email </label>
                 <input name="aemail" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value="">
             </div>
-            <div class="mb-3 col-6">
+            <div class="mb-3 col-12">
                 <label for="exampleInputPassword1" class="form-label">Password</label>
                 <input name="apass" type="password" class="form-control" id="exampleInputPassword1" value="">
             </div>
-            <div class="mb-3 col-3">
+            <center><div class="mb-3 col-3">
             <button name={{tname}} value="{{tname}}" type="submit" class="btn btn-primary">UPDATE </button>
-            </div>
+            </div></center>
         </form>
                                      
     {{/ifEquals}}                                   
